--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "back",
+	"name": "server",
 	"version": "0.0.1",
 	"description": "",
 	"author": "",
@@ -32,26 +32,27 @@
 		"@nestjs/mapped-types": "*",
 		"@nestjs/passport": "^10.0.0",
 		"@nestjs/platform-express": "^9.0.0",
+		"@nestjs/platform-socket.io": "^10.0.5",
 		"@nestjs/serve-static": "^4.0.0",
 		"@nestjs/typeorm": "^10.0.0",
-		"@nestjs/websockets": "^10.1.0",
+		"@nestjs/websockets": "^10.0.5",
 		"app-root-path": "^3.1.0",
 		"axios": "^1.4.0",
 		"bcryptjs": "^2.4.3",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"cookie-parser": "^1.4.6",
-		"csurf": "^1.11.0",
 		"dotenv": "^16.3.1",
-		"express": "4.17.1",
 		"fs-extra": "^11.1.1",
-		"google-auth-library": "^8.9.0",
+		"google-auth-library": "^8.8.0",
 		"node-ipinfo": "^3.4.2",
+		"nodemailer": "^6.9.3",
+		"passport": "^0.6.0",
 		"passport-jwt": "^4.0.1",
 		"pg": "^8.11.1",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.2.0",
-		"socket.io": "^3.0.3",
+		"socket.io": "^4.7.1",
 		"typeorm": "^0.3.17",
 		"uuid": "^9.0.0"
 	},
@@ -60,15 +61,11 @@
 		"@nestjs/schematics": "^9.0.0",
 		"@nestjs/testing": "^9.0.0",
 		"@types/bcryptjs": "^2.4.2",
-		"@types/cookie-parser": "^1.4.3",
-		"@types/csurf": "^1.11.2",
 		"@types/express": "^4.17.13",
-		"@types/express-session": "^1.17.7",
 		"@types/fs-extra": "^11.0.1",
 		"@types/jest": "29.5.0",
 		"@types/multer": "^1.4.7",
 		"@types/node": "18.15.11",
-		"@types/socket.io": "^3.0.2",
 		"@types/supertest": "^2.0.11",
 		"@types/uuid": "^9.0.2",
 		"@typescript-eslint/eslint-plugin": "^5.0.0",
